# community-hub

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  ecosystem.yaml  network-map.yaml  pyproject.toml  render.yaml  seed.yaml
.github/workflows/: ci.yml
data/: api-routes.json  community-stats.json
docs/adr/: 001-fastapi-choice.md  002-shared-database.md  003-websocket-room-manager.md  004-rate-limiting-slowapi.md
docs/pitch/: index.html
ecosystem/pillar-dna/: community.yaml
scripts/: entrypoint.sh
src/community_hub/: __init__.py  app.py  config.py  csrf.py  data_export.py  logging_config.py
src/community_hub/routes/: __init__.py  api.py  community.py  curricula.py  feeds.py  live.py  salons.py  search.py  syllabus.py
src/community_hub/static/: style.css
src/community_hub/templates/: base.html  error.html  index.html  search.html
src/community_hub/templates/community/: contributor_detail.html  contributors.html  events.html  stats.html
src/community_hub/templates/curricula/: detail.html  list.html  session.html
src/community_hub/templates/salons/: detail.html  list.html  live.html
src/community_hub/templates/syllabus/: form.html  path.html
tests/: test_api_models.py  test_app.py  test_data_export.py  test_integration.py  test_routes.py  test_search.py
