[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "community-hub"
version = "0.5.0"
description = "ORGAN-VI flagship — community portal for salons, curricula, and contributor stats"
requires-python = ">=3.11"
dependencies = [
    "koinonia-db @ git+https://github.com/organvm-vi-koinonia/koinonia-db.git@8414b2e",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "psycopg[binary,pool]>=3.1",
    "sqlalchemy[asyncio]>=2.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "httpx>=0.27", "aiosqlite>=0.20", "ruff>=0.4.0"]

[project.scripts]
community-hub = "community_hub.app:run"
community-data-export = "community_hub.data_export:main"

[tool.setuptools.package-data]
community_hub = ["templates/**/*", "static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 99
